# clinicalshift

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/codeql/extensions/clinicalshift-python/: codeql-pack.yml
src/clinicalshift/: __init__.py  build_vectorstores.py  compute_metrics.py  generate_figures.py  generate_guidelines.py  generate_patients.py  run_pipeline.py
