[project]
name = "clinicalshift-2026"
version = "0.1.0"
description = "Evaluating temporal robustness of multi-agent LLM architectures under clinical dataset shift"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "plotly>=5.18.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "scipy>=1.11.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.1.0",
    "transformers>=5.0.0",
    "bert-score>=0.3.13",
    "kaleido>=0.2.1",
    "geopy>=2.4.1",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.4.0",
]

[project.scripts]
generate-patients = "clinicalshift.generate_patients:main"
generate-guidelines = "clinicalshift.generate_guidelines:main"
build-vectorstores = "clinicalshift.build_vectorstores:main"
run-pipeline = "clinicalshift.run_pipeline:main"
compute-metrics = "clinicalshift.compute_metrics:main"

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 99

[tool.ruff]
line-length = 99
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clinicalshift"]
